--- a/css/main.css
+++ b/css/main.css
@@ -1,56 +1,61 @@
-.container {
-    width: 950px;
-    margin: 0 auto;
-    display: grid;
-}
-
-.img img {
-    margin: 0 auto;
-}
-
-.img {
-    display: grid;
-    margin-bottom: 20px;
-}
-
-form.form-verificador {
-    display: grid;
-    width: 200px;
-    row-gap: 10px;
-    text-align: center;
-    margin: 0 auto;
-}
-
-form.form-verificador button {
-    background-color: #2ab82b;
-    color: #fff;
-    border: none;
-    padding: 7px;
-    font-size: 16px;
-    letter-spacing: 1px;
-    font-weight: 700;
-    margin: 10px auto 0 auto;
-    border-radius: 50px;
-    width: 120px;
-}
-
-form.form-verificador input[type="text"] {
-    padding: 10px;
-    border: none;
-    background-color: #f1f1f1;
-    box-shadow: 0 2px 3px rgba(0,0,0,0.3);
-    color: #000;
-}
-
-.row {
-    width: auto;
-    display: inline-block;
-    margin: 20px auto 0 auto;
-    padding: 50px;
-    background-color: #ffffff;
-    box-shadow: 0 3px 3px rgba(0,0,0,0.2);
+* {
+  box-sizing: border-box;
 }
 
 body {
-    background-color: #e6e6e6;
+  background-color: #eeeeee;
+}
+
+img {
+    display: block;
+    margin: 30px auto;
+    box-shadow: 0 5px 10px -7px #333333;
+    
+}
+
+.form {
+  background-color: #ffffff;
+  width: 500px;
+  margin: 50px auto 10px auto;
+  padding: 30px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 10px -3px #333;
+  text-align: center;
+}
+
+input {
+  border-radius: 100px;
+  padding: 10px 15px;
+  width: 50%;
+  border: 1px solid #D9D9D9;
+  outline: none;
+  display: block;
+  margin: 20px auto 20px auto;
+}
+
+button {
+  border-radius: 100px;
+  border: none;
+  background: #719BE6;
+  width: 50%;
+  padding: 10px;
+  color: #FFFFFF;
+  margin-top: 25px;
+  box-shadow: 0 2px 10px -3px #719BE6;
+  display: block;
+  margin: 55px auto 10px auto;
+}
+
+a {
+  text-align: center;
+  margin-top: 30px;
+  color: #719BE6;
+  text-decoration: none;
+  padding: 5px;
+  display: inline-block;
+}
+
+a:hover {
+  text-decoration: underline;
 }
